--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_variables.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_variables.css
@@ -7,6 +7,8 @@
 	--dark-color_12:#191919;
 	--dark-color_15: #262626;
 
+	--dark-color_40: #666666;
+
 	--grey-color_50:#7E7E81;
 	--grey-color_60: #98989A;
 	
