--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_hero-section.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_hero-section.css
@@ -204,7 +204,7 @@
 	background-color: var(--dark-color_10);
 	border: 1px solid var(--dark-color_15);
 	border: 1px solid red;
-	margin: 120px 40px 20px;
+	margin: 230px 40px 20px;
 }
 
 
@@ -254,6 +254,7 @@
 }
 
 .btn-main-indicators {
+	
 	margin: 20px 40px 40px;
 	background-color: var(--dark-color_08);
 	border-radius: 8px;
@@ -262,4 +263,75 @@
 	justify-content: center;
 	align-items: center;
 	gap: 4px;
+}
+
+.icon__information-board {
+	width: 30px;
+	height: 30px;
+	margin-top: 30px;
+	background-image: url(../sourse/img/sprite/css_sprites.png);
+	background-repeat: no-repeat;
+	background-size: 600%;
+
+	/* border: 1px solid red; */
+}
+
+.information-board__item {
+	max-height: 184px;
+	/* padding-bottom: 30px; */
+	/* margin: 0 ; */
+	border-bottom: 1px solid var(--dark-color_15);
+	border-bottom: 1px solid #262626;
+}
+
+.first-item>.icon__information-board {
+	/* width: 30px;
+height: 30px; */
+	/* background-size: 600%; */
+	background-position: -141px -50px;
+
+}
+
+.second-item>.icon__information-board {
+	/* width: 30px;
+	height: 30px; */
+	/* background-size: 600%; */
+	background-position: -141px -7px;
+
+}
+
+.third-item>.icon__information-board {
+	/* width: 30px;
+	height: 30px; */
+
+	background-position: -5px -133px;
+}
+		.information-board_content {
+			margin-top: 16px;
+		}
+
+.title__information-board_content{
+	font-size: 16px;
+	font-weight: 500;
+	/* margin-top: 16px; */
+	color: var(--light_color_absolute);
+}
+.information-board_content > .supscribe{
+	font-size: 14px;
+	font-weight: 400;
+	/* margin-bottom: 10px; */
+}
+
+.information-board__item > .comment{
+	margin-top: 10px;
+}
+
+.arrow_yellow-round {
+	min-width: 40px;
+	min-height: 40px;
+	border-radius: 50%;
+	background-image: url(../sourse/img/arrow_yellow-round.svg);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 }
